ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/IBL_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>IBL Configuration</label>
    <pluralLabel>IBL Configurations</pluralLabel>
</CustomObject>