ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Check_for_Mandatory_Role__c.field-meta.xml
<CustomField>
    <fullName>Check_for_Mandatory_Role__c</fullName>
    <label>Check for Mandatory Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>