ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Highest_Authority_Role__c.field-meta.xml
<CustomField>
    <fullName>Highest_Authority_Role__c</fullName>
    <label>Highest Authority Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>