ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Incident_Access_Profile_List__c.field-meta.xml
<CustomField>
    <fullName>Incident_Access_Profile_List__c</fullName>
    <label>Incident Access Profile List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>