ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/JourneyStatusToRestrictCAMAndApproval__c.field-meta.xml
<CustomField>
    <fullName>JourneyStatusToRestrictCAMAndApproval__c</fullName>
    <description>This is to store the picklist values in comma separated to restrict user to see the CAM and Approval Logs</description>
    <label>JourneyStatusToRestrictCAMAndApproval</label>
    <type>TextArea</type>
</CustomField>