ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Mandatory_Forward_Role__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Forward_Role__c</fullName>
    <label>Mandatory Forward Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>