ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Opportunity_Case_Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Edit_Access__c</fullName>
    <label>Opportunity Case Edit Access</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>