ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/PreDisbursementCheckProfiles__c.field-meta.xml
<CustomField>
    <fullName>PreDisbursementCheckProfiles__c</fullName>
    <label>Pre Disbursement Check Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>