ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Profile_Name_for_CAM_Access__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name_for_CAM_Access__c</fullName>
    <label>Profile Name for CAM Access</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>