ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Roles_for_TF__c.field-meta.xml
<CustomField>
    <fullName>Roles_for_TF__c</fullName>
    <label>Roles for TF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>