ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/RolesToSkipInForwardTo__c.field-meta.xml
<CustomField>
    <fullName>RolesToSkipInForwardTo__c</fullName>
    <description>Comma separated roles to skip from the drop down option in CAM and Approval Log.</description>
    <label>RolesToSkipInForwardTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>