ProdIND/ProdPrograms/force-app/main/default/objects/IBL_Configuration__mdt/fields/Sales_Cap_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cap_Role__c</fullName>
    <label>Sales Cap Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>